--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 	<head>
 
-		<title>{{ .Title }} | Kaldi</title>
+		<title>{{ .Title }} | SysMap</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 
 		<meta charset="utf-8">
